#2 Implement Search - Added a icon to make it clear the API Doc link opens in a new window. Fixed up the min sizing of the mat-sidebar on the profile and browse pages. Changed the sizing of mat-form-fields so they are not tiny and also don't overflow on smaller screens.

--- a/src/app/modules/browse/browse.component.scss
+++ b/src/app/modules/browse/browse.component.scss
@@ -1,6 +1,6 @@
 mat-sidenav {
   width: 12%;
-  min-width: 150px;
+  min-width: 210px;
   padding: 10px 10px 0 10px;
   background-color: #efefee !important;
   border-right: 1px solid #999999 !important;
