--- a/src/app/modules/profile-components/item-add/item-add.component.scss
+++ b/src/app/modules/profile-components/item-add/item-add.component.scss
@@ -1,6 +1,6 @@
 .mat-form-field {
   margin: 5px;
-  min-width: 35rem;
+  width: 35%;
 }
 
 .item-add-form-container {
