--- a/src/app/modules/profile/profile.component.scss
+++ b/src/app/modules/profile/profile.component.scss
@@ -1,6 +1,6 @@
 mat-sidenav {
-  width: 10%;
-  min-width: 150px;
+  width: 12%;
+  min-width: 210px;
   padding: 0;
   background-color: #efefee;
   border-right: 1px solid #999999;
